--- a/FSG/FSG.csproj
+++ b/FSG/FSG.csproj
@@ -16,6 +16,10 @@
     <None Remove="Icon.bmp" />
     <None Remove="NUnit" />
     <None Remove="NUnit3TestAdapter" />
+    <None Remove="Myra" />
+    <None Remove="UI\" />
+    <None Remove="Noesis.GUI" />
+    <None Remove="Noesis.App" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Icon.ico" />
@@ -24,6 +28,10 @@
   <ItemGroup>
     <PackageReference Include="MonoGame.Framework.DesktopGL" Version="3.8.1.303" />
     <PackageReference Include="MonoGame.Content.Builder.Task" Version="3.8.1.303" />
+    <PackageReference Include="Myra" Version="1.4.5" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="UI\" />
   </ItemGroup>
   <Target Name="RestoreDotnetTools" BeforeTargets="Restore">
     <Message Text="Restoring dotnet tools" Importance="High" />
