--- a/FSG/FSG.csproj
+++ b/FSG/FSG.csproj
@@ -20,6 +20,7 @@
     <None Remove="UI\" />
     <None Remove="Noesis.GUI" />
     <None Remove="Noesis.App" />
+    <None Remove="UI\EmpireDetails\" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Icon.ico" />
@@ -32,6 +33,7 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="UI\" />
+    <Folder Include="UI\EmpireDetails\" />
   </ItemGroup>
   <Target Name="RestoreDotnetTools" BeforeTargets="Restore">
     <Message Text="Restoring dotnet tools" Importance="High" />
