--- a/FSG/FSG.csproj
+++ b/FSG/FSG.csproj
@@ -21,6 +21,7 @@
     <None Remove="Noesis.GUI" />
     <None Remove="Noesis.App" />
     <None Remove="UI\EmpireDetails\" />
+    <None Remove="UI\TurnPanel\" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Icon.ico" />
@@ -34,6 +35,7 @@
   <ItemGroup>
     <Folder Include="UI\" />
     <Folder Include="UI\EmpireDetails\" />
+    <Folder Include="UI\TurnPanel\" />
   </ItemGroup>
   <Target Name="RestoreDotnetTools" BeforeTargets="Restore">
     <Message Text="Restoring dotnet tools" Importance="High" />
