--- a/FSG/FSG.csproj
+++ b/FSG/FSG.csproj
@@ -21,8 +21,16 @@
     <None Remove="Noesis.GUI" />
     <None Remove="Noesis.App" />
     <None Remove="UI\TurnPanel\" />
-    <None Remove="UI\CommandLog\" />
     <None Remove="UI\Sidebar\" />
+    <None Remove="UI\TabComponent\" />
+    <None Remove="UI\Sidebar\LandInfo\" />
+    <None Remove="UI\Sidebar\EmpireInfo\" />
+    <None Remove="UI\Sidebar\RegionInfo\" />
+    <None Remove="UI\Sidebar\AgentInfo\" />
+    <None Remove="UI\DebugPanel\CommandLog\" />
+    <None Remove="UI\Common\" />
+    <None Remove="UI\Common\Tabs\" />
+    <None Remove="UI\Common\EntityList\" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Icon.ico" />
@@ -36,8 +44,15 @@
   <ItemGroup>
     <Folder Include="UI\" />
     <Folder Include="UI\TurnPanel\" />
-    <Folder Include="UI\CommandLog\" />
     <Folder Include="UI\Sidebar\" />
+    <Folder Include="UI\Sidebar\LandInfo\" />
+    <Folder Include="UI\Sidebar\EmpireInfo\" />
+    <Folder Include="UI\Sidebar\RegionInfo\" />
+    <Folder Include="UI\Sidebar\AgentInfo\" />
+    <Folder Include="UI\DebugPanel\CommandLog\" />
+    <Folder Include="UI\Common\" />
+    <Folder Include="UI\Common\Tabs\" />
+    <Folder Include="UI\Common\EntityList\" />
   </ItemGroup>
   <Target Name="RestoreDotnetTools" BeforeTargets="Restore">
     <Message Text="Restoring dotnet tools" Importance="High" />
