--- a/FSG/FSG.csproj
+++ b/FSG/FSG.csproj
@@ -44,6 +44,8 @@
     <None Remove="Definitions\ValueTypes\" />
     <None Remove="Conditions\Land\" />
     <None Remove="Services\" />
+    <None Remove="Assets\Definitions\Spells\" />
+    <None Remove="Conditions\Region\" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Icon.ico" />
@@ -79,6 +81,8 @@
     <Folder Include="Definitions\ValueTypes\" />
     <Folder Include="Conditions\Land\" />
     <Folder Include="Services\" />
+    <Folder Include="Assets\Definitions\Spells\" />
+    <Folder Include="Conditions\Region\" />
   </ItemGroup>
   <Target Name="RestoreDotnetTools" BeforeTargets="Restore">
     <Message Text="Restoring dotnet tools" Importance="High" />
