--- a/FSG/FSG.csproj
+++ b/FSG/FSG.csproj
@@ -47,6 +47,9 @@
     <None Remove="Assets\Definitions\Spells\" />
     <None Remove="Conditions\Region\" />
     <None Remove="Extensions\" />
+    <None Remove="UtilityAI\" />
+    <None Remove="Utils\" />
+    <None Remove="UtilityAI\ComplexTasks\" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Icon.ico" />
@@ -85,6 +88,9 @@
     <Folder Include="Assets\Definitions\Spells\" />
     <Folder Include="Conditions\Region\" />
     <Folder Include="Extensions\" />
+    <Folder Include="UtilityAI\" />
+    <Folder Include="Utils\" />
+    <Folder Include="UtilityAI\ComplexTasks\" />
   </ItemGroup>
   <Target Name="RestoreDotnetTools" BeforeTargets="Restore">
     <Message Text="Restoring dotnet tools" Importance="High" />
