--- a/FSG/FSG.csproj
+++ b/FSG/FSG.csproj
@@ -50,6 +50,8 @@
     <None Remove="UtilityAI\" />
     <None Remove="Utils\" />
     <None Remove="UtilityAI\ComplexTasks\" />
+    <None Remove="Assets\Definitions\Tasks\" />
+    <None Remove="Assets\Definitions\Scorers\" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Icon.ico" />
@@ -91,6 +93,8 @@
     <Folder Include="UtilityAI\" />
     <Folder Include="Utils\" />
     <Folder Include="UtilityAI\ComplexTasks\" />
+    <Folder Include="Assets\Definitions\Tasks\" />
+    <Folder Include="Assets\Definitions\Scorers\" />
   </ItemGroup>
   <Target Name="RestoreDotnetTools" BeforeTargets="Restore">
     <Message Text="Restoring dotnet tools" Importance="High" />
