--- a/FSG/Assets/Definitions/Tasks/tasks.json
+++ b/FSG/Assets/Definitions/Tasks/tasks.json
@@ -1,31 +1,26 @@
 [
   {
-    "type": "task",
-    "name": "win_game",
-    "taskType": "highest-score",
-    "subtasks": [ "evaluate_regions_to_conquest", "send_agent_to_conquest_region" ],
-    "isRoot": true,
-    "target": "Empire"
+    "Name": "WinGame",
+    "TaskType": "HighestScore",
+    "Subtasks": [ "EvaluateRegionsToConquest", "SendAgentToConquestRegion" ],
+    "IsRoot": true,
+    "Target": "Empire"
   },
   {
-    "type": "task",
-    "name": "send_agent_to_conquest_region",
-    "target": "Empire",
-    "weight": 1.0
+    "Name": "SendAgentToConquestRegion",
+    "Target": "Empire",
+    "Weight": 1.0
   },
   {
-    "type": "task",
-    "name": "evaluate_regions_to_conquest",
-    "taskType": "highest-score",
-    "subtasks": [ "evaluate_region_to_conquest" ],
-    "target": "Empire",
-    "weight": 0.2
+    "Name": "EvaluateRegionsToConquest",
+    "TaskType": "HighestScore",
+    "Subtasks": [ "EvaluateRegionToConquest" ],
+    "Target": "Empire",
+    "Weight": 0.2
   },
   {
-    "type": "task",
-    "name": "evaluate_region_to_conquest",
-    "target": "AllRegions",
-    "scorers": [ "grassland_number" ]
+    "Name": "EvaluateRegionToConquest",
+    "Target": "AllRegions",
+    "Scorers": [ "GrasslandNumber" ]
   }
-
 ]
