Add separated viewports for map and UI

--- a/FSG.UI/FSG.UI.csproj
+++ b/FSG.UI/FSG.UI.csproj
@@ -16,6 +16,7 @@
     <None Remove="UI\" />
     <None Remove="Myra" />
     <None Remove="MonoGame.Extended.Input" />
+    <None Remove="MonoGame.Extended" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Icon.ico" />
@@ -26,6 +27,7 @@
     <PackageReference Include="MonoGame.Content.Builder.Task" Version="3.8.1.303" />
     <PackageReference Include="Myra" Version="1.4.5" />
     <PackageReference Include="MonoGame.Extended.Input" Version="3.8.0" />
+    <PackageReference Include="MonoGame.Extended" Version="3.8.0" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\FSG\FSG.csproj" />
