--- a/FSG.UI/FSG.UI.csproj
+++ b/FSG.UI/FSG.UI.csproj
@@ -17,6 +17,7 @@
     <None Remove="Myra" />
     <None Remove="MonoGame.Extended.Input" />
     <None Remove="MonoGame.Extended" />
+    <None Remove="UI\Sidebar\CapitalInfo\" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Icon.ico" />
@@ -34,6 +35,7 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="UI\" />
+    <Folder Include="UI\Sidebar\CapitalInfo\" />
   </ItemGroup>
   <Target Name="RestoreDotnetTools" BeforeTargets="Restore">
     <Message Text="Restoring dotnet tools" Importance="High" />
