Add pops and stratas

--- a/FSG/FSG.csproj
+++ b/FSG/FSG.csproj
@@ -44,6 +44,7 @@
     <None Remove="AI\" />
     <None Remove="AI\InputValues\" />
     <None Remove="MonoGame.Extended.Input" />
+    <None Remove="Assets\Definitions\Stratas\" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Icon.ico" />
@@ -77,6 +78,7 @@
     <Folder Include="Assets\Definitions\Scorers\" />
     <Folder Include="AI\" />
     <Folder Include="AI\InputValues\" />
+    <Folder Include="Assets\Definitions\Stratas\" />
   </ItemGroup>
   <Target Name="RestoreDotnetTools" BeforeTargets="Restore">
     <Message Text="Restoring dotnet tools" Importance="High" />
