--- a/FSG.UI/FSG.UI.csproj
+++ b/FSG.UI/FSG.UI.csproj
@@ -18,6 +18,7 @@
     <None Remove="MonoGame.Extended.Input" />
     <None Remove="MonoGame.Extended" />
     <None Remove="UI\Sidebar\CapitalInfo\" />
+    <None Remove="UI\Sidebar\PopulationInfo\" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Icon.ico" />
@@ -36,6 +37,7 @@
   <ItemGroup>
     <Folder Include="UI\" />
     <Folder Include="UI\Sidebar\CapitalInfo\" />
+    <Folder Include="UI\Sidebar\PopulationInfo\" />
   </ItemGroup>
   <Target Name="RestoreDotnetTools" BeforeTargets="Restore">
     <Message Text="Restoring dotnet tools" Importance="High" />
