Minor performance improvements, ai agent conquest regions, other stuff

--- a/FSG/Assets/Definitions/Tasks/tasks.json
+++ b/FSG/Assets/Definitions/Tasks/tasks.json
@@ -2,7 +2,7 @@
   {
     "Name": "WinGame",
     "TaskType": "HighestScore",
-    "Subtasks": [ "EvaluateRegionsToConquest", "SendAgentToConquestRegion" ],
+    "Subtasks": [ "SendAgentToConquestRegion" ],
     "IsRoot": true,
     "Target": "Empire"
   },
